<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>Comet</groupId>
    <artifactId>Comet-Parent</artifactId>
    <version>2.12.1-TEST1</version>
    <packaging>pom</packaging>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <name>Comet</name>
    <url>http://www.comet.im</url>
    <description>Comet Server developed by the Comet Team</description>

    <modules>
        <module>Comet-API</module>
        <module>Comet-API-Example</module>
        <module>Comet-Server-Protocol</module>
        <module>Comet-Server</module>

        <module>Comet-Website</module>

        <module>Comet-Common</module>

        <module>Comet-Game-Groups</module>
        <module>Comet-Game-Catalog</module>
        <module>Comet-Game-Achievements</module>
        <module>Comet-Game-Items</module>
        <module>Comet-Game-Rooms</module>

        <module>Comet-GameCenter-FastFood</module>

        <module>Comet-Storage-API</module>
        <module>Comet-Storage-MySQL</module>

        <module>Comet-Networking-API</module>
        <module>Comet-Networking-Composers</module>
    </modules>

</project>
